# ArisList

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml
.github/workflows/: docker-image.yml
crates/server/: Cargo.toml
crates/server/src/: archive.rs  assets.rs  atomic_file.rs  auth.rs  config.rs  db.rs  enrich.rs  error.rs  jobs.rs  main.rs  models.rs  routes.rs  search.rs  security.rs  settings.rs  vfs.rs  watcher.rs
crates/server/src/scanner/: mod.rs
docs/: reference-research.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: NovelReader.tsx
frontend/src/components/material/: GlassFilterProvider.tsx  GlassSurface.tsx  index.ts
frontend/src/hooks/: useProgressQueue.ts
frontend/src/types/: foliate-js.d.ts
scripts/: inspect-media.mjs  validate-project.mjs
