[package]
name = "media-shelf-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
html-escape = "0.2"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
lofty = "0.22"
mime_guess = "2"
notify = "8"
rand = "0.8"
quick-xml = { version = "0.41", features = ["serialize"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "cookies", "gzip", "json", "rustls-tls", "stream"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio", "chrono"] }
sqlx-sqlite = { version = "=0.8.6", default-features = false, features = ["bundled", "chrono"] }
tantivy = "0.26"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
